# rpg-narrative-server

./: .dockerignore  .env.test  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  importlinter.ini  pyproject.toml
.github/workflows/: ci.yml
data/: documents.json  metadata.json  vectors.json
data/campaigns/c/: events.json
data/campaigns/dm_763035914502930443/: events.json
data/campaigns/test/: events.json
data/campaigns/test_campaign/: events.json
data/memory/: response_cache.json
docs/en/: architecture.md  benchmark.md  setup.md
docs/pt-br/: benchmark.md  setup.md
scripts/: benchmark_retrieval.py
scripts/benchmark/: engine_factory.py  metrics.py  run.py  scenarios.py
src/rpg_narrative_server/: app.py
src/rpg_narrative_server/application/commands/: base_command.py  campaign_command.py  command_bus.py  command_registry.py  gm_command.py  roll_command.py  session_command.py
src/rpg_narrative_server/application/context/: campaign_context.py
src/rpg_narrative_server/application/dto/: llm_request.py  llm_response.py
src/rpg_narrative_server/application/ports/: campaign_repository.py  dice_parser.py  embedding_gateway.py  event_bus.py  llm_gateway.py  storage.py  vector_index_gateway.py  vector_memory_port.py
src/rpg_narrative_server/application/services/: benchmark_analysis.py  benchmark_formatter.py  context_selector.py  context_service.py  document_resolver.py  embedding_strategy.py  health_service.py  memory_service.py  message_service.py  narrative_graph_service.py  narrative_memory_service.py  retrieval_pipeline.py
src/rpg_narrative_server/application/state/: campaign_state.py  campaign_state_store.py
src/rpg_narrative_server/bootstrap/: container.py  container_builder.py  lifecycle.py
src/rpg_narrative_server/config/: __init__.py  env_loader.py  loader.py  paths.py  profile.py  settings.py  types.py
src/rpg_narrative_server/domain/dice/: condition.py  dice_engine.py  dice_regex.py  parser.py  probability.py  roller.py  value_objects.py
src/rpg_narrative_server/domain/events/: dice_rolled_event.py  player_action.py
src/rpg_narrative_server/domain/narrative/: campaign.py  context_assembler.py  narrative_builder.py  narrative_graph.py  narrative_memory.py  player_action.py  session_summarizer.py
src/rpg_narrative_server/domain/npc/: generator.py
src/rpg_narrative_server/domain/rag/: context_builder.py  context_formatter.py  context_window.py  query_classifier.py  query_planner.py  retrieval_selector.py
src/rpg_narrative_server/domain/random/: random_provider.py
src/rpg_narrative_server/frameworks/discord/: bot.py  bot_types.py  command_adapter.py  command_base.py  dependencies.py  executor.py  message_adapter.py  processing.py  responder.py  utils.py
src/rpg_narrative_server/infrastructure/cache/: embedding_cache.py  narrative_cache.py  response_cache.py  response_cache_storage.py  scene_cache.py  semantic_cache.py  ttl_cache.py
src/rpg_narrative_server/infrastructure/context/: campaign_loader.py
src/rpg_narrative_server/infrastructure/embeddings/: factory.py  registry.py
src/rpg_narrative_server/infrastructure/events/: blinker_event_bus.py  cache_handler.py  dice_handler.py  narrative_handler.py
src/rpg_narrative_server/infrastructure/index/: keyword_index.py
src/rpg_narrative_server/infrastructure/llm/: __init__.py  anthropic_provider.py  base_provider.py  deepseek_provider.py  factory.py  gemini_provider.py  groq_provider.py  lmstudio_provider.py  ollama_provider.py  openai_provider.py
src/rpg_narrative_server/infrastructure/narrative/: narrative_graph.py  narrative_memory.py
src/rpg_narrative_server/infrastructure/nlp/: entity_extractor.py  simple_tokenizer.py
src/rpg_narrative_server/shared/: resilience.py
src/rpg_narrative_server/usecases/: create_campaign.py  delete_campaign.py  end_session.py  list_campaigns.py  narrative_event.py  roll_dice.py  run_benchmark.py
src/rpg_narrative_server/utils/: hash_utils.py  string_utils.py
src/rpg_narrative_server/vector_index/: builder.py  components.py  vector_index_manager.py
tests/: conftest.py
tests/application/context/: test_campaign_context.py
tests/application/dto/: test_llm_request.py  test_llm_response.py
tests/application/narrative/: test_context_building.py  test_narrative_builder.py  test_narrative_flow.py  test_narrative_usecase.py  test_prompt_building.py
tests/application/ports/: test_embedding_gateway.py
tests/application/services/: test_benchmark_analysis.py  test_benchmark_formatter.py  test_campaign_state.py  test_context_selector.py  test_context_service.py  test_document_resolver.py  test_embedding_strategy.py  test_error_mapper.py  test_health_service.py  test_intent_classifier.py  test_memory_service.py  test_message_service.py  test_narrative_graph_service.py  test_narrative_memory_service.py  test_retrieval_pipeline.py
tests/application/state/: test_campaign_state.py  test_campaign_state_store.py
tests/architecture/: rules.py  test_layers.py  test_no_cycles.py  utils.py
tests/config/builders/: test_container_builder.py
tests/config/factories/: bot.py  container_factory.py  context.py  deps.py
tests/config/fakes/: fake_embedding.py  fake_llm.py  fake_vector_index.py  usecases.py
tests/config/fixtures/: no_network.py
tests/config/harness/: message.py  narrative.py  retrieval.py  usecase.py
tests/config/helpers/: asserts.py  ctx.py  discord_factory.py  golden_assert.py
tests/golden/: test_narrative_pipeline_golden.py  test_prompt_golden.py
tests/golden/prompts/: basic.txt  pipeline.txt  with_history.txt  with_memory.txt
tests/quality/: test_imports.py  test_no_test_dependencies.py
tests/runtime/: test_bootstrap.py  test_container.py
tests/unit/domain/: test_dice_domain.py  test_dice_engine.py  test_dice_probability.py  test_dice_roller.py  test_npc.py
tests/unit/shared/: test_json_utils.py  test_resilient_call.py
tests/unit/usecases/: test_end_session.py  test_narrative.py  test_roll_dice.py  test_run_benchmark.py
tests/unit/utils/: test_hash_utils.py  test_string_utils.py
(+267 files in other folders)
