[project]
name = "rpg_narrative_server"
version = "0.1.0"
description = "Narrative engine for RPG storytelling (LLM + RAG)"
requires-python = ">=3.11,<3.13"
readme = "README.md"

authors = [{ name = "Sergio Lacerda Vieira" }]

dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.34,<1.0",
    "blinker>=1.9,<2.0",
    "discord.py>=2.4,<3.0",
    "python-dotenv>=1.0,<2.0",
    "openai>=1.51,<2.0",
    "tenacity>=9.0,<10.0",
    "numpy>=1.26,<2.0",
]

[project.optional-dependencies]

test = [
    "pytest>=8.3,<9.0",
    "pytest-xdist>=3.5,<4.0",
    "pytest-asyncio>=0.23,<0.25",
    "pytest-cov>=5.0,<6.0",
]

ci = [
    "rpg_narrative_server[test]",
    "black>=24.0,<25.0",
    "ruff>=0.6,<1.0",
    "mypy>=1.10,<2.0",
]

# ---------------------------------------------------------
# 🔥 PYTEST (paralelo por padrão)
# ---------------------------------------------------------
[tool.pytest.ini_options]
addopts = "-n auto --dist=worksteal"
testpaths = ["tests"]
asyncio_mode = "auto"

# ---------------------------------------------------------
# 🧠 COVERAGE (PRODUCTION-GRADE)
# ---------------------------------------------------------
[tool.coverage.run]
branch = true
parallel = true
source = ["src/rpg_narrative_server"]

# 🔥 ignora infra (clean arch)
omit = [
    "*/infrastructure/*",
    "*/frameworks/*",
    "*/config/*",
    "*/tests/*",
]

[tool.coverage.report]
skip_empty = true
show_missing = true
precision = 2

exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.coverage.paths]
source = [
    "src/rpg_narrative_server",
    "*/site-packages/rpg_narrative_server",
]

# ---------------------------------------------------------
# 🧠 MYPY
# ---------------------------------------------------------
[tool.mypy]
mypy_path = "src"
python_version = "3.11"
ignore_missing_imports = true
