[build-system]
requires = ["setuptools>=72", "wheel"]
build-backend = "setuptools.build_meta"

# ---------------------------------------------------------
# 📦 PROJECT
# ---------------------------------------------------------
[project]
name = "rpg_narrative_server"
version = "0.1.0"
description = "Narrative engine for RPG storytelling (LLM + RAG)"
requires-python = ">=3.11"
readme = "README.md"
authors = [{ name = "Sergio Lacerda Vieira" }]

dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.34,<1.0",
    "blinker>=1.9,<2.0",
    "discord.py>=2.4,<3.0",
    "python-dotenv>=1.0,<2.0",
    "openai>=1.51,<2.0",
    "tenacity>=9.0,<10.0",
    "numpy>=1.26,<2.0",
]

# ---------------------------------------------------------
# 🧩 OPTIONAL DEPENDENCIES
# ---------------------------------------------------------
[project.optional-dependencies]

vector-db = [
    "chromadb>=0.4.24,<0.6",
    "hnswlib>=0.8,<1.0",
]

local = [
    "torch>=2.2,<3.0",
    "sentence-transformers>=2.7,<3.0",
]

full = [
    "chromadb>=0.4.24,<0.6",
    "hnswlib>=0.8,<1.0",
    "torch>=2.2,<3.0",
    "sentence-transformers>=2.7,<3.0",
]

dev-cpu = [
    "chromadb>=0.4.24,<0.6",
    "hnswlib>=0.8,<1.0",
    "sentence-transformers>=2.7,<3.0",
]

test = [
    "pytest>=8.4,<9.0",
    "pytest-xdist>=3.6,<4.0",
    "pytest-asyncio>=0.24,<0.25",
    "pytest-cov>=5.0,<6.0",
    "pytest-mock>=3.14,<4.0",
]

dev = [
    "rpg_narrative_server[test]",
    "black>=24.0,<25.0",
    "ruff>=0.6,<1.0",
    "mypy>=1.10,<2.0",
    "types-cachetools",
    "pre-commit>=3.8,<4.0",
    "pygments>=2.19.3"
]

ci = [
    "rpg_narrative_server[test]",
    "black>=24.0,<25.0",
    "ruff>=0.6,<1.0",
    "mypy>=1.10,<2.0",
    "types-cachetools",
    "import-linter>=2.0,<3.0",
    "pip-audit>=2.7,<3.0",
    "pygments>=2.19.3"
]

# ---------------------------------------------------------
# ⚙️ CLI
# ---------------------------------------------------------
[project.scripts]
rpg_narrative_server = "rpg_narrative_server.app:run"

# ---------------------------------------------------------
# 🧪 PYTEST
# ---------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

# logs mais úteis no CI
log_cli = true
log_cli_level = "INFO"

# fail rápido em erros críticos
addopts = """
--strict-markers
--strict-config
--tb=short
"""

markers = [
    "unit: testes unitários puros",
    "golden: validação de outputs esperados (snapshots/narrativa)",
    "architecture: valida regras de arquitetura",
]

# ---------------------------------------------------------
# 📊 COVERAGE
# ---------------------------------------------------------
[tool.coverage.run]
branch = true
parallel = true
source = ["src/rpg_narrative_server"]
omit = [
    "*/tests/*",
    "*/conftest.py",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_empty = true
fail_under = 80

exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.xml]
output = "coverage.xml"

# ---------------------------------------------------------
# 🧠 MYPY
# ---------------------------------------------------------
[tool.mypy]
mypy_path = "src"
python_version = "3.11"

explicit_package_bases = true
ignore_missing_imports = true

warn_unused_configs = true
warn_unused_ignores = true

check_untyped_defs = true
disallow_untyped_defs = false  # evoluir depois

no_implicit_optional = true

[[tool.mypy.overrides]]
module = [
    "rpg_narrative_server.infrastructure.*",
    "rpg_narrative_server.vector_index.*",
]
ignore_errors = true

# ---------------------------------------------------------
# ⚡ RUFF
# ---------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501",
          "B008",  # FastAPI Depends
        ]

[tool.ruff.lint.isort]
known-first-party = ["rpg_narrative_server"]

# ---------------------------------------------------------
# 🎨 BLACK
# ---------------------------------------------------------
[tool.black]
line-length = 100
target-version = ["py311", "py312"]
